# shortest-path-algorithm-demo

./: .gitignore  DEPLOYMENT.md  README.md  app.py  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.streamlit/: config.toml
specs/1-route-visualizer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-route-visualizer/checklists/: requirements.md
specs/1-route-visualizer/contracts/: README.md  algorithm_contracts.py  service_contracts.py  ui_contracts.py
src/: __init__.py
src/algorithms/: __init__.py  astar.py  dijkstra.py  graph.py  heuristics.py
src/services/: __init__.py  geocoding.py  map_renderer.py  routing copy.py  routing.py
src/ui/: __init__.py  input_form.py  map_display.py  metrics_display.py
src/utils/: __init__.py  config.py  types.py  validators.py
tests/: conftest.py
tests/algorithms/: __init__.py  test_astar.py  test_dijkstra.py  test_graph.py  test_heuristics.py
tests/integration/: test_end_to_end.py  test_geocoding.py  test_map_renderer.py  test_routing.py
tests/performance/: __init__.py
tests/unit/: test_error_handling.py  test_ui_metrics.py  test_validators.py
